@@ -166,7 +166,7 @@ JSTATE_ENABLED=Enabled
 JSTATE_ENABLE_ITEM=Enable Item
 JSTATE_DISABLED=Disabled
 
-JSEARCH_FILTER_LABEL=Filter:
+JSEARCH_FILTER_LABEL=Filter
 JSEARCH_FILTER_CLEAR=Clear
 JSEARCH_FILTER_SUBMIT=Search
 JSEARCH_FILTER=Search
