@@ -12,11 +12,11 @@ AUTOMATIC LANGUAGE SELECTION=Auto Language Selection
 BR ELEMENTS=BR Elements
 CLEANS CODE ON EDITOR LOAD=Cleans code on editor load
 CODE CLEANUP=Code Cleanup
-CODE CLEANUP ON SAVE=Code cleanup on save
-CODE CLEANUP ON STARTUP=Code Cleanup on Startup
+CODE CLEANUP ON SAVE=Clean code on save
+CODE CLEANUP ON STARTUP=Clean code on load
 CODE CLEANUP UPON SAVING ARTICLE=Code cleaning upon saving article
-COMPRESSED VERSION=Compressed Version
-CUSTOM CSS CLASSES=Custom CSS Classes
+COMPRESSED VERSION=Compressed version
+CUSTOM CSS CLASSES=Custom CSS classes
 DATE FORMAT=Date Format
 DESCLANGCODE=Editor UI Language. A value here is mandatory if manual language selection is set.
 DESCLANGMODE=If Yes, editor language will automatically match selected UI language. Do not activate if appropriate editor languages are not installed.
@@ -27,9 +27,9 @@ ELEMENT PATH=Element Path
 ELEMENTS THAT WILL BE CLEANED FROM THE TEXT=Elements that will be cleaned from the text
 EXTENDED VALID ELEMENTS=Extended Valid Elements
 FLASH=Flash
-FORMAT OF INSERTED DATE. ONLY WORKS IN ADVANCED MODE=Format of inserted date. Only works in Advanced mode.
-FORMAT OF INSERTED TIME. ONLY WORKS IN ADVANCED MODE=Format of inserted time. Only works in Advanced mode
-FRONT ONLY=Front Only.
+FORMAT OF INSERTED DATE. ONLY WORKS IN ADVANCED MODE=Format of inserted date. Only works in Advanced Mode.
+FORMAT OF INSERTED TIME. ONLY WORKS IN ADVANCED MODE=Format of inserted time. Only works in Advanced Mode
+FRONT ONLY=Front Only
 FULLSCREEN=Fullscreen
 FUNCTIONALITY=Functionality
 HORIZONTAL RULE=Horizontal Rule
