@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+22-Nov-2009 Ron Severdia
+^ CSS button styling, icon update
+# Language fixes
+
 21-Nov-2009 Ron Severdia
 ^ Modal UI fixes
 # BlueStork CSS cleanup for modals, change px to em
